--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.9.0",
+    "animejs": "^3.2.1",
+    "autoprefixer": "^10.4.4",
     "next": "12.1.5",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "eslint": "8.13.0",
